--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2.3",
+        "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^5.3",
@@ -10,7 +10,6 @@
         "symfony/dotenv": "4.2.*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.2.*",
-        "symfony/maker-bundle": "^1.11",
         "symfony/yaml": "4.2.*"
     },
     "config": {
@@ -59,5 +58,6 @@
         }
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.11"
     }
 }
